[workspace]
members = ["repkg", "repkg-build", "repkg-core", "repkg-registry-host", "tree-sitter-repkg"]

[workspace.dependencies]
lenient_semver = "0.4.2"
semver = { version = "1.0.14", features = ["serde"] }
miette = { version = "5.3.0" }
thiserror = { version = "1.0.37" }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "signal"] }