[package]
name = "repkg-build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
pom = "3.2.0"
color-eyre = { workspace = true }
repkg-common = { path = "../repkg-common" }
repkg-macros = { path = "../repkg-macros" }
tar = "0.4.38"
flate2 = "1.0.24"
copy_dir = "0.1.2"
os_info = { git = "https://github.com/martintc/os_info.git", branch = "feature-os-family", default-features = false }
miette = { workspace = true }
thiserror = { workspace = true }