[package]
name = "repkg-build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
repkg-core = { path = "../repkg-core" }
miette = { workspace = true }
toml = "0.5.9"
serde = { version = "1.0.147", features = ["derive"] }
thiserror = { workspace = true }
lenient_semver = { workspace = true }
semver = { workspace = true }
glob = "0.3.0"
copy_dir = "0.1.2"
