[package]
name = "repkg-build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
repkg-core = { path = "../repkg-core", features = ["client"] }
miette = { workspace = true }
toml = "0.5.9"
serde = { version = "1.0.147", features = ["derive"] }
thiserror = { workspace = true }
lenient_semver = { workspace = true }
semver = { workspace = true }
glob = "0.3.0"
copy_dir = "0.1.2"
dialoguer = { version = "0.10.2", optional = true }
pretty-bytes = { version = "0.2.2", optional = true }
tree-sitter = "0.20.9"
tree-sitter-repkg = { version = "0.0.1", path = "../tree-sitter-repkg" }
tokio = { workspace = true }

[features]
recar = ["fancy", "dep:dialoguer", "dep:pretty-bytes"]
fancy = ["miette/fancy"]
