[package]
name = "repkg-core"
version = "0.1.0"
edition = "2021"

# Preferably this would be a dynamic library, but cargo does not have a decent way to do this, so for now
# this library must be statically linked into every repkg binary that uses it.

[dependencies]
miette = { workspace = true }
thiserror = { workspace = true }
lenient_semver = { workspace = true }
semver = { workspace = true }