[package]
name = "repkg-registry-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
clap = { version = "4.0.18", features = ["derive"] }
miette = { workspace = true }
serde = { version = "1.0.147", features = ["derive"] }
surrealdb = "1.0.0-beta.8"
thiserror = { workspace = true }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.5.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[features]
fancy = ["miette/fancy"]
